# EErratic

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/cpp/: main_trigger.cpp
example/eerratic_timer/c/: main.c
example/eerratic_timer_class/cpp/: main.cpp
include/: eerratic_timer.h  eerratic_timer_class.hpp
src/: eerratic_timer_class.cpp
test/: test_eerratic_timer.cpp
